Enable SSL/TLS, disable STREAM_PROCESSOR and RECORD_ACCESSOR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ option(FLB_JEMALLOC           "Build with Jemalloc support"   No)
 option(FLB_REGEX              "Build with Regex support"     Yes)
 option(FLB_UTF8_ENCODER       "Build with UTF8 encoding support" Yes)
 option(FLB_PARSER             "Build with Parser support"    Yes)
-option(FLB_TLS                "Build with SSL/TLS support"    No)
+option(FLB_TLS                "Build with SSL/TLS support"    Yes)
 option(FLB_BINARY             "Build executable binary"      Yes)
 option(FLB_EXAMPLES           "Build examples"               Yes)
 option(FLB_SHARED_LIB         "Build shared library"         Yes)
@@ -67,10 +67,10 @@ option(FLB_SQLDB              "Enable SQL embedded DB"       Yes)
 option(FLB_HTTP_SERVER        "Enable HTTP Server"            No)
 option(FLB_BACKTRACE          "Enable stacktrace support"    Yes)
 option(FLB_LUAJIT             "Enable Lua Scripting support" Yes)
-option(FLB_RECORD_ACCESSOR    "Enable record accessor"       Yes)
+option(FLB_RECORD_ACCESSOR    "Enable record accessor"       No)
 option(FLB_SYSTEM_STRPTIME    "Use strptime in system libc"  Yes)
 option(FLB_STATIC_CONF        "Build binary using static configuration")
-option(FLB_STREAM_PROCESSOR   "Enable Stream Processor"      Yes)
+option(FLB_STREAM_PROCESSOR   "Enable Stream Processor"      No)
 option(FLB_CORO_STACK_SIZE    "Set coroutine stack size")
 
 # Metrics: Experimental Feature, disabled by default on 0.12 series
